:wrench: Gitignore Updated w/ Sass, Elaborated on Readme

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,10 @@ $RECYCLE.BIN/
 *.iml
 *.xml
 
+# Sass Compile Files
+*.scssc
+*.map
+
 # =========================
 # Operating System Files
 # =========================
